# cubesat-telem-fw

./: .gitignore  README.md
deploy/: build_portable.ps1  esp_build.ps1  esp_flash_monitor.ps1  esp_idf_env.ps1  esp_menuconfig.ps1  install_groundstation.ps1  list_serial_ports.ps1  rangepi_console.ps1  run_mastercontrol_rangepi.ps1  run_mastercontrol_sim.ps1  run_mastercontrol_web.ps1  run_mastercontrol_wifi.ps1  run_rangepi_viewer.ps1
firmware/: CMakeLists.txt  sdkconfig  sdkconfig.defaults  sdkconfig.old
firmware/components/drivers/: CMakeLists.txt  flash_store.c  gnss.c  imu.c  lora.c  power_monitor.c  secure_element.c  temp_sensor.c  wifi_udp_transport.c
firmware/components/drivers/include/: flash_store.h  gnss.h  imu.h  loraq.h  power_monitor.h  secure_element.h  temp_sensor.h  wifi_udp_transport.h
firmware/components/security/: CMakeLists.txt  Kconfig  key_store.c  lattice_security.c  mldsa_auth.c  mlkem_session.c  packet_crypto.c  replay.c  session.c
firmware/components/security/include/: key_store.h  lattice_security.h  mldsa_auth.h  mlkem_session.h  packet_crypto.h  replay.h  session.h
firmware/docs/: esp32_runbook.md  rangepi_bridge.md  security.md
firmware/main/: CMakeLists.txt  app_config.h  app_main.c  board_config.h  system_init.c
firmware/test/: test_packet_codec.c
groundstation/: app.py  requirements-pq.txt
groundstation/backend/: event_engine.py  node_registry.py  packet_parser.py  pq_lattice.py  rangepi.py  rangepi_simulator.py  replay_filter.py  serial_link.py
groundstation/models/: command.py  diagnostic.py  lattice.py  (+1 more)
(+103 files in other folders)
